text up to figure 2

--- a/references.bib
+++ b/references.bib
@@ -14,7 +14,7 @@
 	title = {Organization of neuronal microtubules in the nematode Caenorhabditis elegans},
 	volume = {82},
 	issn = {0021-9525},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/479300},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/479300},
 	abstract = {We have studied the organization of microtubules in neurons of the nematode Caenorhabditis elegans. Six neurons, which we call the microtubule cells, contain bundles of darkly staining microtubules which can be followed easily in serial-section electron micrographs. Reconstruction of individual microtubules in these cells indicate that most, if not all, microtubules are short compared with the length of the cell process. Average microtubule length varies characteristically with cell type. The arrangement of microtubules gives an overall polarity to each bundle: the distal ends of the microtubles are on the outside of the bundle, whereas the proximal ends are preferentially inside. The distal and proximal ends each have a characteristic appearance indicating that these microtubules may have a polarity of their own. Short microtubules in processes of other neurons in C. elegans have also been observed.},
 	number = {1},
 	journal = {The Journal of Cell Biology},
@@ -274,7 +274,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 @article{song_peripheral_2007,
 	title = {Peripheral multidendritic sensory neurons are necessary for rhythmic locomotion behavior in Drosophila larvae},
 	volume = {104},
-	url = {http://www.pnas.org.ezp-prod1.hul.harvard.edu/content/104/12/5199.abstract},
+	url = {http://www.pnas.org/content/104/12/5199.abstract},
 	doi = {10.1073/pnas.0700895104},
 	abstract = {From breathing to walking, rhythmic movements encompass physiological processes important across the entire animal kingdom. It is thought by many that the generation of rhythmic behavior is operated by a central pattern generator {(CPG)} and does not require peripheral sensory input. Sensory feedback is, however, required to modify or coordinate the motor activity in response to the circumstances of actual movement. In contrast to this notion, we report here that sensory input is necessary for the generation of larval locomotion, a form of rhythmic behavior. Blockage of all peripheral sensory inputs resulted in cessation of larval crawling. By conditionally silencing various subsets of larval peripheral sensory neurons, we identified the multiple dendritic {(MD)} neurons as the neurons essential for the generation of rhythmic peristaltic locomotion. By recording the locomotive motor activities, we further demonstrate that removal of {MD} neuron input disrupted rhythmic motor firing pattern in a way that prolonged the stereotyped segmental motor firing duration and prevented the propagation of posterior to anterior segmental motor firing. These findings reveal that {MD} sensory neuron input is a necessary component in the neural circuitry that generates larval locomotion.},
 	number = {12},
@@ -642,6 +642,24 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {535--545}
 },
 
+@article{karbowski_systems_2008,
+	title = {Systems level circuit model of C. elegans undulatory locomotion: mathematical modeling and molecular genetics},
+	volume = {24},
+	issn = {1573-6873},
+	shorttitle = {Systems level circuit model of C. elegans undulatory locomotion},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/17768672},
+	doi = {10.1007/s10827-007-0054-6},
+	abstract = {To establish the relationship between locomotory behavior and dynamics of neural circuits in the nematode C. elegans we combined molecular and theoretical approaches. In particular, we quantitatively analyzed the motion of C. elegans with defective synaptic {GABA} and acetylcholine transmission, defective muscle calcium signaling, and defective muscles and cuticle structures, and compared the data with our systems level circuit model. The major experimental findings are: (1) anterior-to-posterior gradients of body bending flex for almost all strains both for forward and backward motion, and for neuronal mutants, also analogous weak gradients of undulatory frequency, (2) existence of some form of neuromuscular (stretch receptor) feedback, (3) invariance of neuromuscular wavelength, (4) biphasic dependence of frequency on synaptic signaling, and (5) decrease of frequency with increase of the muscle time constant. Based on (1) we hypothesize that the Central Pattern Generator {(CPG)} is located in the head both for forward and backward motion. Points (1) and (2) are the starting assumptions for our theoretical model, whose dynamical patterns are qualitatively insensitive to the details of the {CPG} design if stretch receptor feedback is sufficiently strong and slow. The model reveals that stretch receptor coupling in the body wall is critical for generation of the neuromuscular wave. Our model agrees with our behavioral data (3), (4), and (5), and with other pertinent published data, e.g., that frequency is an increasing function of muscle gap-junction coupling.},
+	number = {3},
+	journal = {Journal of Computational Neuroscience},
+	author = {Karbowski, Jan and Schindelman, Gary and Cronin, Christopher J and Seah, Adeline and Sternberg, Paul W},
+	month = jun,
+	year = {2008},
+	note = {{PMID:} 17768672},
+	keywords = {Animals, Caenorhabditis elegans, Locomotion, Mechanoreceptors, Models, Biological, Models, Genetic, Motor Activity, Mutation, Signal Transduction, Synapses},
+	pages = {253--276}
+},
+
 @incollection{mango_c._2007,
 	title = {The C. elegans pharynx: a model for oganogenesis},
 	url = {http://dev.wormbook.org/chapters/www_organformation/organformation.html},
@@ -901,6 +919,23 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {8259--8269}
 },
 
+@article{liu_low_2006,
+	title = {Low conductance gap junctions mediate specific electrical coupling in body-wall muscle cells of Caenorhabditis elegans},
+	volume = {281},
+	issn = {0021-9258},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16434400},
+	doi = {10.1074/jbc.M512382200},
+	abstract = {Invertebrate innexins and their mammalian homologues, the pannexins, are gap junction proteins. Although a large number of such proteins have been identified, few of the gap junctions that they form have been characterized to provide combined information of biophysical properties, coupling pattern, and molecular compositions. We adapted the dual whole cell voltage clamp technique to in situ analysis of electrical coupling in Caenorhabditis elegans body-wall muscle. We found that body-wall muscle cells were electrically coupled in a highly organized and specific pattern. The coupling was characterized by small (350 {pS} or less) junctional conductance {(G(j))}, which showed a bell-shaped relationship with junctional potential {(V(j))} but was independent of membrane potential {(V(m)).} Injection of currents comparable to the junctional current {(I(j))} into body-wall muscle cells caused significant depolarization, suggesting important functional relevance. The innexin {UNC-9} appeared to be a key component of the gap junctions. Both Myc- and green fluorescent protein-tagged {UNC-9} was localized to muscle intercellular junctions. G(j) was greatly inhibited in unc-9(fc16), a putative null mutant. Specific inhibition of {UNC-9} function in muscle cells reduced locomotion velocity. Despite {UNC-9} expression in both motor neurons and body-wall muscle cells, analyses of miniature and evoked postsynaptic currents in the unc-9 mutant showed normal neuromuscular transmission. These analyses provide a relatively detailed description of innexin-based gap junctions in a native tissue and suggest that innexin-based small conductance gap junctions can play an important role in processes such as locomotion.},
+	number = {12},
+	journal = {The Journal of Biological Chemistry},
+	author = {Liu, Qiang and Chen, Bojun and Gaier, Eric and Joshi, Jaya and Wang, {Zhao-Wen}},
+	month = mar,
+	year = {2006},
+	note = {{PMID:} 16434400},
+	keywords = {Animals, Biophysical Phenomena, Biophysics, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Electrophysiology, Gap Junctions, Membrane Potentials, Membrane Proteins, Models, Anatomic, Models, Biological, Motor Neurons, Movement, Muscles, Mutation, Oscillometry, {Patch-Clamp} Techniques, Protein Structure, Tertiary, Tissue Distribution},
+	pages = {7881--7889}
+},
+
 @article{schafer_mechanism_1996,
 	title = {Mechanism of the Reaction Catalyzed by Mandelate Racemase: Structure and Mechanistic Properties of the {D270N} Mutant†,‡},
 	volume = {35},
@@ -1091,7 +1126,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 @article{arous_automated_2010,
 	title = {Automated imaging of neuronal activity in freely behaving Caenorhabditis elegans},
 	issn = {{1872-678X}},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/20096306},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20096306},
 	doi = {10.1016/j.jneumeth.2010.01.011},
 	abstract = {In order to understand how neuronal circuits control locomotory patterns it is necessary to record neuronal activity of freely behaving animals. Here, using a new automated system for simultaneous recording of behavior and neuronal activity in freely moving Caenorhabditis elegans on standard agar plates, we show that spontaneous reversals from forward to backward locomotion reflect precisely the activity of the {AVA} command interneurons. We also witness spontaneous activity transients in the {PLM} sensory neurons during free behavior of the worm in standard conditions. We show that these activity transients are coupled to short spontaneous forward accelerations of the worm.},
 	journal = {Journal of Neuroscience Methods},
@@ -1523,7 +1558,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {{FMRFamide} neuropeptides and acetylcholine synergistically inhibit egg-laying by C. elegans},
 	volume = {11},
 	issn = {1546-1726},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/18806786},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18806786},
 	doi = {10.1038/nn.2186},
 	abstract = {Egg-laying behavior of the Caenorhabditis elegans hermaphrodite is regulated by G protein signaling pathways. Here we show that the egg laying-defective mutant egl-6(n592) carries an activating mutation in a G protein-coupled receptor that inhibits C. elegans egg-laying motor neurons in a G(o)-dependent manner. Ligands for {EGL-6} are {Phe-Met-Arg-Phe-NH(2)} {(FMRFamide)-related} peptides encoded by the genes flp-10 and flp-17. flp-10 is expressed in both neurons and non-neuronal cells. The major source of flp-17 peptides is a pair of presumptive sensory neurons, the {BAG} neurons. Genetic analysis of the egl-6 pathway revealed that the {EGL-6} neuropeptide signaling pathway functions redundantly with acetylcholine to inhibit egg-laying. The retention of embryos in the uterus of the C. elegans hermaphrodite is therefore under the control of a presumptive sensory system and is inhibited by the convergence of signals from neuropeptides and the small-molecule neurotransmitter acetylcholine.},
 	number = {10},
@@ -1660,6 +1695,24 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 4351805},
 	keywords = {Acetates, Adenosine Monophosphate, Ammonia, Ammonium Chloride, Bromides, Chemotaxis, Chlorides, Cyclic {AMP}, Cyclic {GMP}, Cysteine, Histidine, {Hydrogen-Ion} Concentration, Iodides, Lithium, Lysine, Magnesium, Mutation, Nematoda, Potassium, {PQ}, {PQE}  - definite citation, {PQE} Specific Aim 2, Sodium},
 	pages = {817--21}
+},
+
+@article{bryden_neural_2008,
+	title = {Neural control of Caenorhabditis elegans forward locomotion: the role of sensory feedback},
+	volume = {98},
+	issn = {0340-1200},
+	shorttitle = {Neural control of Caenorhabditis elegans forward locomotion},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18350313},
+	doi = {10.1007/s00422-008-0212-6},
+	abstract = {This paper presents a simple yet biologically-grounded model for the neural control of Caenorhabditis elegans forward locomotion. We identify a minimal circuit within the C. elegans ventral cord that is likely to be sufficient to generate and sustain forward locomotion in vivo. This limited subcircuit appears to contain no obvious central pattern generated control. For that subcircuit, we present a model that relies on a chain of oscillators along the body which are driven by local and proximate mechano-sensory input. Computer simulations were used to study the model under a variety of conditions and to test whether it is behaviourally plausible. Within our model, we find that a minimal circuit of {AVB} interneurons and B-class motoneurons is sufficient to generate and sustain fictive forward locomotion patterns that are robust to significant environmental perturbations. The model predicts speed and amplitude modulation by the {AVB} command interneurons. An extended model including D-class motoneurons is included for comparison.},
+	number = {4},
+	journal = {Biological Cybernetics},
+	author = {Bryden, John and Cohen, Netta},
+	month = apr,
+	year = {2008},
+	note = {{PMID:} 18350313},
+	keywords = {Animals, Caenorhabditis elegans, Computer Simulation, Feedback, Locomotion, Models, Neurological, Nerve Net, Neural Networks {(Computer)}, Neurons, Sensation},
+	pages = {339--351}
 },
 
 @article{sawin_c._2000,
@@ -2143,6 +2196,22 @@ These results show that the microstructure can be used as a behavioral screen fo
 	howpublished = {{http://www.chin-sang.ca/movies/C.\%20elegans\%20adult\%20hermaphrodite.mov}}
 },
 
+@article{marder_principles_1996,
+	title = {Principles of rhythmic motor pattern generation},
+	volume = {76},
+	issn = {0031-9333},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/8757786},
+	abstract = {Rhythmic movements are produced by central pattern-generating networks whose output is shaped by sensory and neuromodulatory inputs to allow the animal to adapt its movements to changing needs. This review discusses cellular, circuit, and computational analyses of the mechanisms underlying the generation of rhythmic movements in both invertebrate and vertebrate nervous systems. Attention is paid to exploring the mechanisms by which synaptic and cellular processes interact to play specific roles in shaping motor patterns and, consequently, movement.},
+	number = {3},
+	journal = {Physiological Reviews},
+	author = {Marder, E and Calabrese, R L},
+	month = jul,
+	year = {1996},
+	note = {{PMID:} 8757786},
+	keywords = {Animals, Circadian Rhythm, Motor Activity, Neural Networks {(Computer)}, Synaptic Transmission},
+	pages = {687--717}
+},
+
 @article{wicks_integration_1995,
 	title = {Integration of mechanosensory stimuli in Caenorhabditis elegans},
 	volume = {15},
@@ -2191,7 +2260,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {A developmental analysis of spontaneous and reflexive reversals in the {nematodeCaenorhabditis} elegans},
 	volume = {21},
 	issn = {0022-3034},
-	url = {http://onlinelibrary.wiley.com.ezp-prod1.hul.harvard.edu/doi/10.1002/neu.480210403/pdf},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/neu.480210403/pdf},
 	doi = {10.1002/neu.480210403},
 	number = {4},
 	journal = {Journal of Neurobiology},
