--- a/references.bib
+++ b/references.bib
@@ -130,6 +130,19 @@
 	pages = {347--361}
 },
 
+@article{white_structure_1976,
+	title = {The Structure of the Ventral Nerve Cord of Caenorhabditis elegans},
+	volume = {275},
+	url = {http://rstb.royalsocietypublishing.org/content/275/938/327.abstract},
+	doi = {10.1098/rstb.1976.0086},
+	abstract = {The nervous system of Caenorhabditis elegans is arranged as a series of fibre bundles which run along internal hypodermal ridges. Most of the sensory integration takes place in a ring of nerve fibres which is wrapped round the pharynx in the head. The body muscles in the head are innervated by motor neurones in this nerve ring while those in the lower part of the body are innervated by a set of motor neurones in a longitudinal fibre bundle which joins the nerve ring, the ventral cord. These motor neurones can be put into five classes on the basis of their morphology and synaptic input. At any one point along the cord only one member from each class has neuromuscular junctions. Members of a given class are arranged in a regular linear sequence in the cord and have non-overlapping fields of motor synaptic activity, the transition between fields of adjacent neurones being sharp and well defined. Members of a given class form gap junctions with neighbouring members of the same class but never to motor neurones of another class. Three of the motor neurone classes receive their synaptic input from a set of interneurones coming from the nerve ring. These interneurones can in turn be grouped into four classes and each of the three motor neurone classes receives its synaptic input from a unique combination of interneurone classes. The possible developmental and functional significance of these observations is discussed.},
+	number = {938},
+	journal = {Philosophical Transactions of the Royal Society of London. B, Biological Sciences},
+	author = {White, J. G. and Southgate, Eileen and Thomson, J. N. and Brenner, S.},
+	year = {1976},
+	pages = {327 --348}
+},
+
 @article{nagel_light_2005,
 	title = {Light Activation of Channelrhodopsin-2 in Excitable Cells of Caenorhabditis elegans Triggers Rapid Behavioral Responses},
 	volume = {15},
@@ -385,6 +398,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {147--152}
 },
 
+@article{chen_wiring_2006,
+	title = {Wiring optimization can relate neuronal structure and function},
+	volume = {103},
+	issn = {0027-8424},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16537428},
+	doi = {10.1073/pnas.0506806103},
+	abstract = {We pursue the hypothesis that neuronal placement in animals minimizes wiring costs for given functional constraints, as specified by synaptic connectivity. Using a newly compiled version of the Caenorhabditis elegans wiring diagram, we solve for the optimal layout of 279 nonpharyngeal neurons. In the optimal layout, most neurons are located close to their actual positions, suggesting that wiring minimization is an important factor. Yet some neurons exhibit strong deviations from "optimal" position. We propose that biological factors relating to axonal guidance and command neuron functions contribute to these deviations. We capture these factors by proposing a modified wiring cost function.},
+	number = {12},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Chen, Beth L and Hall, David H and Chklovskii, Dmitri B},
+	month = mar,
+	year = {2006},
+	note = {{PMID:} 16537428},
+	keywords = {Animals, Caenorhabditis elegans, Models, Neurological, Neurons, Synapses},
+	pages = {4723--4728}
+},
+
 @book{dawes_advances_????,
 	address = {London},
 	title = {Advances in Parasitology},
@@ -402,7 +432,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	abstract = {Transformation of mechanical energy into ionic currents is essential for touch, hearing and nociception. Although {DEG/ENaC} proteins are believed to form sensory mechanotransduction channels, the evidence for this role remains indirect. By recording from C. elegans touch receptor neurons in vivo, we found that external force evokes rapidly activating mechanoreceptor currents {(MRCs)} carried mostly by Na(+) and blocked by amiloride-characteristics consistent with direct mechanical gating of a {DEG/ENaC} channel. Like mammalian Pacinian corpuscles, these neurons depolarized with both positive and negative changes in external force but not with sustained force. Null mutations in the {DEG/ENaC} gene mec-4 and in the accessory ion channel subunit genes mec-2 and mec-6 eliminated {MRCs.} In contrast, the genetic elimination of touch neuron-specific microtubules reduced, but did not abolish, {MRCs.} Our findings link the application of external force to the activation of a molecularly defined metazoan sensory transduction channel.},
 	number = {1},
 	journal = {Nature Neuroscience},
-	author = {O'hagan, Robert and Chalfie, Martin and Goodman, Miriam B},
+	author = {{O'Hagan}, Robert and Chalfie, Martin and Goodman, Miriam B},
 	month = jan,
 	year = {2005},
 	note = {{PMID:} 15580270},
@@ -660,6 +690,22 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {253--276}
 },
 
+@article{roghani_molecular_1994,
+	title = {Molecular cloning of a putative vesicular transporter for acetylcholine},
+	volume = {91},
+	issn = {0027-8424},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/7938002},
+	abstract = {Classical neurotransmitters such as acetylcholine {(ACh)} require transport into synaptic vesicles for regulated exocytotic release. The Caenorhabditis elegans gene unc-17 encodes a protein with homology to mammalian transporters that concentrate monoamine neurotransmitters into synaptic vesicles. Mutations in unc-17 protect against organophosphorus toxicity, indicating a role in cholinergic neurotransmission. Using the relationship of unc-17 to the vesicular amine transporters, we first isolated a related sequence from the electric ray Torpedo californica {[Torpedo} vesicular {ACh} transporter {(TorVAChT)]} that is expressed by the electric lobe but not by peripheral tissues. Using the relationship of the Torpedo sequence to unc-17, we then isolated the {cDNA} for a rat homologue {(rVAChT).} Northern blot analysis shows expression of these sequences in the basal forebrain, basal ganglia, and spinal cord but not cerebellum or peripheral tissues. In situ hybridization shows expression of {rVAChT} {mRNA} in all cholinergic cell groups, including those in the basal forebrain, brainstem, and spinal cord that previously have been shown to express choline acetyltransferase {mRNA.} The human {VAChT} gene also localizes to chromosome 10 near the gene for choline acetyltransferase. Taken together, these observations support a role for {rVAChT} in vesicular {ACh} transport and indicate its potential as a novel marker for cholinergic neurons.},
+	number = {22},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Roghani, A and Feldman, J and Kohan, S A and Shirzadi, A and Gundersen, C B and Brecha, N and Edwards, R H},
+	month = oct,
+	year = {1994},
+	note = {{PMID:} 7938002},
+	keywords = {Acetylcholine, Amino Acid Sequence, Animals, Base Sequence, Blotting, Northern, Brain, Brain Stem, Caenorhabditis elegans, Carrier Proteins, Choline {O-Acetyltransferase}, Cloning, Molecular, {DNA} Primers, {DNA}, Complementary, In Situ Hybridization, Membrane Transport Proteins, Models, Structural, Molecular Sequence Data, Mutagenesis, Organ Specificity, Polymerase Chain Reaction, Prosencephalon, Protein Conformation, Rats, Sequence Homology, Amino Acid, Spinal Cord, Torpedo, Transcription, Genetic, Vesicular Acetylcholine Transport Proteins, Vesicular Transport Proteins},
+	pages = {10620--10624}
+},
+
 @incollection{mango_c._2007,
 	title = {The C. elegans pharynx: a model for oganogenesis},
 	url = {http://dev.wormbook.org/chapters/www_organformation/organformation.html},
@@ -667,7 +713,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	booktitle = {Wormbook},
 	publisher = {{WormBook}},
 	author = {Mango, Susan E.},
-	editor = {The C. elegans Research Community},
+	editor = {The C. Elegans Research Community},
 	month = jan,
 	year = {2007}
 },
@@ -983,6 +1029,21 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {247--260}
 },
 
+@article{chalfie_developmental_1981,
+	title = {Developmental genetics of the mechanosensory neurons of Caenorhabditis elegans},
+	volume = {82},
+	issn = {0012-1606},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/7227647},
+	number = {2},
+	journal = {Developmental Biology},
+	author = {Chalfie, M and Sulston, J},
+	month = mar,
+	year = {1981},
+	note = {{PMID:} 7227647},
+	keywords = {Alleles, Animals, Caenorhabditis, Chromosome Mapping, Genes, Microscopy, Electron, Mutation, Neurons, Species Specificity, Touch},
+	pages = {358--370}
+},
+
 @article{khatri_rat_2006,
 	title = {Rat whisker psychophysics},
 	volume = {26},
@@ -1181,7 +1242,7 @@ When placed in open, liquid-filled, microfluidic chambers containing a square ar
 These results show that the microstructure can be used as a behavioral screen for mechanosensory and uncoordinated mutants. It is likely that worms use mechanosensation in the movement and navigation through heterogeneous environments.},
 	number = {6},
 	journal = {{PLoS} {ONE}},
-	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martínez, Fernando and Austin, Robert H. and Ryu, William S.},
+	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martinez, Fernando and Austin, Robert H. and Ryu, William S.},
 	year = {2008},
 	note = {{PMC2430527}},
 	keywords = {Caenorhabditis elegans, Locomotion, pdms, Touch},
@@ -2194,6 +2255,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	url = {http://www.chin-sang.ca/movies/C.%20elegans%20adult%20hermaphrodite.mov},
 	author = {{Chin-Sang}, Ian D.},
 	howpublished = {{http://www.chin-sang.ca/movies/C.\%20elegans\%20adult\%20hermaphrodite.mov}}
+},
+
+@article{haspel_motoneurons_2010,
+	title = {Motoneurons dedicated to either forward or backward locomotion in the nematode Caenorhabditis elegans},
+	volume = {30},
+	issn = {1529-2401},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20720122},
+	doi = {10.1523/JNEUROSCI.2244-10.2010},
+	abstract = {Multifunctional motoneurons and muscles, which are active during forward and backward locomotion are ubiquitous in animal models. However, studies in the nematode Caenorhabditis elegans suggest that some locomotor motoneurons are necessary only for forward locomotion (dorsal B-motoneurons, {DB)}, while others (dorsal A-motoneurons, {DA)} are necessary only for backward locomotion. We tested this hypothesis directly by recording the activity of these motoneurons during semirestrained locomotion. For this purpose, we used epifluorescence imaging of the genetically encoded calcium sensor cameleon, expressed in specific motoneurons, while monitoring locomotor behavior through the microscope condenser using a second camera. We found that ventral and dorsal B-motoneurons {(DB} and {VB)} were coactive during forward locomotion while ventral A-motoneurons {(VA)} were only active during backward locomotion. The signals we recorded correlated with the direction of locomotion but not with the faster undulatory cycles. To our knowledge, these are the first recordings of motoneuron activity in C. elegans and the only direction-dedicated motoneurons described to date.},
+	number = {33},
+	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+	author = {Haspel, Gal and {O'Donovan}, Michael J and Hart, Anne C},
+	month = aug,
+	year = {2010},
+	note = {{PMID:} 20720122},
+	keywords = {Animals, Caenorhabditis elegans, Dermoscopy, Larva, Locomotion, Motor Neurons, Muscles, Periodicity},
+	pages = {11151--11156}
 },
 
 @article{marder_principles_1996,
