--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -44,4 +44,4 @@ Thesis Committee:
 
 Franziska Graf.
 
-Typeset with \LaTeXe using a modified version of Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
+Typeset with \XeTeX using a modified version of Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
