--- a/references.bib
+++ b/references.bib
@@ -384,20 +384,6 @@ For studying the function of specific neurons in their native circuitry, it is d
 	year = {2009}
 },
 
-@article{leifer_optogenetic_2011,
-	title = {Optogenetic manipulation of neural activity in freely moving Caenorhabditis elegans},
-	volume = {8},
-	issn = {1548-7091},
-	url = {http://dx.doi.org/10.1038/nmeth.1554},
-	doi = {10.1038/nmeth.1554},
-	number = {2},
-	journal = {Nat Meth},
-	author = {Leifer, Andrew M and {Fang-Yen}, Christopher and Gershow, Marc and Alkema, Mark J and Samuel, Aravinthan D T},
-	month = feb,
-	year = {2011},
-	pages = {147--152}
-},
-
 @article{chen_wiring_2006,
 	title = {Wiring optimization can relate neuronal structure and function},
 	volume = {103},
@@ -432,7 +418,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	abstract = {Transformation of mechanical energy into ionic currents is essential for touch, hearing and nociception. Although {DEG/ENaC} proteins are believed to form sensory mechanotransduction channels, the evidence for this role remains indirect. By recording from C. elegans touch receptor neurons in vivo, we found that external force evokes rapidly activating mechanoreceptor currents {(MRCs)} carried mostly by Na(+) and blocked by amiloride-characteristics consistent with direct mechanical gating of a {DEG/ENaC} channel. Like mammalian Pacinian corpuscles, these neurons depolarized with both positive and negative changes in external force but not with sustained force. Null mutations in the {DEG/ENaC} gene mec-4 and in the accessory ion channel subunit genes mec-2 and mec-6 eliminated {MRCs.} In contrast, the genetic elimination of touch neuron-specific microtubules reduced, but did not abolish, {MRCs.} Our findings link the application of external force to the activation of a molecularly defined metazoan sensory transduction channel.},
 	number = {1},
 	journal = {Nature Neuroscience},
-	author = {{O'Hagan}, Robert and Chalfie, Martin and Goodman, Miriam B},
+	author = {O'hagan, Robert and Chalfie, Martin and Goodman, Miriam B},
 	month = jan,
 	year = {2005},
 	note = {{PMID:} 15580270},
@@ -713,7 +699,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	booktitle = {Wormbook},
 	publisher = {{WormBook}},
 	author = {Mango, Susan E.},
-	editor = {The C. Elegans Research Community},
+	editor = {The C. elegans Research Community},
 	month = jan,
 	year = {2007}
 },
@@ -1172,7 +1158,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	title = {Automated imaging of neuronal activity in freely behaving Caenorhabditis elegans},
 	volume = {187},
 	issn = {0165-0270},
-	url = {http://www.sciencedirect.com.ezp-prod1.hul.harvard.edu/science/article/B6T04-4Y6S7GN-3/2/f80f32c2892d34b07f1db80b870e4b53},
+	url = {http://www.sciencedirect.com/science/article/B6T04-4Y6S7GN-3/2/f80f32c2892d34b07f1db80b870e4b53},
 	doi = {10.1016/j.jneumeth.2010.01.011},
 	abstract = {In order to understand how neuronal circuits control locomotory patterns it is necessary to record neuronal activity of freely behaving animals. Here, using a new automated system for simultaneous recording of behavior and neuronal activity in freely moving Caenorhabditis elegans on standard agar plates, we show that spontaneous reversals from forward to backward locomotion reflect precisely the activity of the {AVA} command interneurons. We also witness spontaneous activity transients in the {PLM} sensory neurons during free behavior of the worm in standard conditions. We show that these activity transients are coupled to short spontaneous forward accelerations of the worm.},
 	number = {2},
@@ -1242,7 +1228,7 @@ When placed in open, liquid-filled, microfluidic chambers containing a square ar
 These results show that the microstructure can be used as a behavioral screen for mechanosensory and uncoordinated mutants. It is likely that worms use mechanosensation in the movement and navigation through heterogeneous environments.},
 	number = {6},
 	journal = {{PLoS} {ONE}},
-	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martinez, Fernando and Austin, Robert H. and Ryu, William S.},
+	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martínez, Fernando and Austin, Robert H. and Ryu, William S.},
 	year = {2008},
 	note = {{PMC2430527}},
 	keywords = {Caenorhabditis elegans, Locomotion, pdms, Touch},
@@ -1346,6 +1332,17 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = jun,
 	year = {2008},
 	pages = {631--633}
+},
+
+@book{kandel_search_2007,
+	edition = {1},
+	title = {In Search of Memory: The Emergence of a New Science of Mind},
+	isbn = {0393329372},
+	shorttitle = {In Search of Memory},
+	publisher = {W. W. Norton \& Company},
+	author = {Kandel, Eric R.},
+	month = mar,
+	year = {2007}
 },
 
 @article{kallarakal_mechanism_1995,
@@ -1691,6 +1688,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	year = {1994},
 	note = {{ArticleType:} primary\_article / Full publication date: Nov. 18, 1994 / Copyright © 1994 American Association for the Advancement of Science},
 	pages = {1202--1208}
+},
+
+@article{leifer_optogenetic_2011,
+	title = {Optogenetic manipulation of neural activity in freely moving Caenorhabditis elegans},
+	volume = {8},
+	issn = {1548-7105},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21240279},
+	doi = {10.1038/nmeth.1554},
+	abstract = {We present an optogenetic illumination system capable of real-time light delivery with high spatial resolution to specified targets in freely moving Caenorhabditis elegans. A tracking microscope records the motion of an unrestrained worm expressing channelrhodopsin-2 or halorhodopsin in specific cell types. Image processing software analyzes the worm's position in each video frame, rapidly estimates the locations of targeted cells and instructs a digital micromirror device to illuminate targeted cells with laser light of the appropriate wavelengths to stimulate or inhibit activity. Because each cell in an unrestrained worm is a rapidly moving target, our system operates at high speed (∼50 frames per second) to provide high spatial resolution (∼30 μm). To test the accuracy, flexibility and utility of our system, we performed optogenetic analyses of the worm motor circuit, egg-laying circuit and mechanosensory circuits that have not been possible with previous methods.},
+	number = {2},
+	journal = {Nature Methods},
+	author = {Leifer, Andrew M and {Fang-Yen}, Christopher and Gershow, Marc and Alkema, Mark J and Samuel, Aravinthan D T},
+	month = feb,
+	year = {2011},
+	note = {{PMID:} 21240279},
+	keywords = {Animals, Caenorhabditis elegans, Movement, Muscle Cells, Neurons, Optical Processes, Photobiology},
+	pages = {147--152}
 },
 
 @misc{_red_????,
@@ -2186,7 +2200,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	volume = {86},
 	issn = {00029297},
 	shorttitle = {Abraham's Children in the Genome Era},
-	url = {http://www.cell.com.ezp-prod1.hul.harvard.edu/AJHG/abstract/S0002-9297(10)00246-6},
+	url = {http://www.cell.com/AJHG/abstract/S0002-9297(10)00246-6},
 	doi = {10.1016/j.ajhg.2010.04.015},
 	number = {6},
 	journal = {The American Journal of Human Genetics},
