--- a/thesis.tex
+++ b/thesis.tex
@@ -21,7 +21,8 @@
 \acknowledgments
 
 % incluude each chapter...
-\include{chapters/chapter1}
+\include{chapters/introduction}
+\include{chapters/colbert}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
 
