started writing up barcode analysis

--- a/thesis.tex
+++ b/thesis.tex
@@ -24,7 +24,7 @@
 \include{chapters/introduction}
 \include{chapters/colbert}
 \include{chapters/chapter2}
-\include{chapters/chapter3}
+\include{chapters/barcodeAnalysis}
 
 % the back matter
 \bibliography{references}
