--- a/thesis.tex
+++ b/thesis.tex
@@ -23,8 +23,12 @@
 % incluude each chapter...
 \include{chapters/introduction}
 \include{chapters/colbert}
-\include{chapters/chapter2}
-\include{chapters/chapter3}
+%\include{chapters/proprioceptive}
+\include{chapters/omegaTurn}
+%\include{chapters/mating}
+%\include{chapters/DNAbarcode}
+%\include{chapters/barcodeDetection}
+%\include{chapters/conclusion}
 
 % the back matter
 \bibliography{references}
