Begin adding in Quan's paper on proprioceptive feedback
This is the version sent in response to the first round of reviewer respones at Nature.

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,7 +23,7 @@
 % incluude each chapter...
 \include{chapters/introduction}
 \include{chapters/colbert}
-%\include{chapters/proprioceptive}
+\include{chapters/proprioceptive}
 \include{chapters/omegaTurn}
 %\include{chapters/mating}
 %\include{chapters/DNAbarcode}
